2006-01-13  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 0.99.3.0

	* libpam_misc/misc_conv.c (misc_conv): Fix strict aliasing
	error.

	* modules/pam_umask/pam_umask.c (search_key): Don't ignore
	EOF/error return value from fgets().

	* configure.in: Check for getline and getdelim

	* po/fi.po: Add new translations.
	* po/de.po: Likewise.
	* po/es.po: Likewise.
	* po/fr.po: Likewise.
	* po/it.po: Likewise.
	* po/ja.po: Likewise.
	* po/pt_BR.po: Likewise.
	* po/zh_CH.po: Likewise.
	* po/zh_TW.po: Likewise.

2006-01-13  Dmitry V. Levin  <ldv@altlinux.org>

	* libpam/pam_audit.c (_pam_auditlog): Replace strerror(errno)
	call with %m specifier.

2006-01-12  Thorsten Kukuk  <kukuk@thkukuk.de>

	* configure.in: Add check for -fpie/-pie
	* modules/pam_filter/upperLOWER/Makefile.am: Compile/link
	upperLOWER with -fpie/-pie if supported.
	* modules/pam_unix/Makefile.am: Compile/link unix_chkpwd
	with -fpie/-pie if supported.

2006-01-12  Steve Grubb  <sgrubb@redhat.com>

	* configure.in: Add check for audit library.
	* libpam/Makefile.am (libpam_la_LDFLAGS): Add LIBAUDIT.
	(libpam_la_SOURCES): Add pam_audit.c.
	* libpam/pam_account.c (pam_acct_mgmt): Add _pam_auditlog() call.
	* libpam/pam_auth.c (pam_authenticate), (pam_setcred): Likewise.
	* libpam/pam_password.c (pam_chauthtok):  Likewise.
	* libpam/pam_session.c (pam_open_session),
	(pam_close_session): Likewise.
	* libpam/pam_private.h: Add audit_state member to pam_handle,
	declare _pam_auditlog and _pam_audit_end.
	* libpam/pam_start.c (pam_start): Initialize audit_state.
	* libpam/pam_audit.c: New file with _pam_auditlog and _pam_audit_end
	implementation.
	* libpam/pam_end.c (pam_end): Add _pam_audit_end() call.
	* NEWS: Note about added auditing.

2006-01-11  Thorsten Kukuk  <kukuk@thkukuk.de>

	* libpam/Makefile.am (AM_CFLAGS): Define LIBPAM_COMPILE.

	* libpam/include/security/_pam_types.h: Don't define PAM_NONNULL
	if we compile libpam itself.

	* po/hu.po: Update with new translations.
